--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uiid/template",
-  "version": "0.0.0-alpha.0",
-  "description": "",
+  "version": "0.0.0-alpha.1",
+  "description": "uiid react component library template",
   "keywords": [],
   "exports": {
     "./styles.css": "./dist/styles.css",
